# internal/controller/http/auth_controller.go
@@ -1,6 +1,7 @@
 package http
 
 import (
+	"avito-tech-merch/internal/models/dto"
 	"avito-tech-merch/internal/service"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -14,6 +15,17 @@ func NewAuthController(service service.Service) AuthController {
 	return &authController{service: service}
 }
 
+// Register godoc
+// @Summary Register a new user
+// @Description Register a new user with username and password, returns a JWT token
+// @Tags auth
+// @Accept  json
+// @Produce  json
+// @Param request body dto.RegisterRequest true "User registration data"
+// @Success 200 {object} dto.AuthResponse "JWT token"
+// @Failure 400 {object} dto.ErrorResponse400 "Invalid request"
+// @Failure 500 {object} dto.ErrorResponse500 "Internal server error"
+// @Router /auth/register [post]
 func (c *authController) Register(ctx *gin.Context) {
 	var request struct {
 		Username string `json:"username" binding:"required"`
@@ -21,19 +33,30 @@ func (c *authController) Register(ctx *gin.Context) {
 	}
 
 	if err := ctx.ShouldBindJSON(&request); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		ctx.JSON(http.StatusBadRequest, dto.ErrorResponse400{Code: 400, Message: "invalid request"})
 		return
 	}
 
 	token, err := c.service.Register(ctx, request.Username, request.Password)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		ctx.JSON(http.StatusInternalServerError, dto.ErrorResponse500{Code: 500, Message: err.Error()})
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"token": token})
+	ctx.JSON(http.StatusOK, dto.AuthResponse{Token: token})
 }
 
+// Login godoc
+// @Summary Login a user
+// @Description Login a user with username and password, returns a JWT token
+// @Tags auth
+// @Accept  json
+// @Produce  json
+// @Param request body dto.LoginRequest true "User login data"
+// @Success 200 {object} dto.AuthResponse "JWT token"
+// @Failure 400 {object} dto.ErrorResponse400 "Invalid request"
+// @Failure 401 {object} dto.ErrorResponseInvalidCredentials401 "Invalid credentials"
+// @Router /auth/login [post]
 func (c *authController) Login(ctx *gin.Context) {
 	var request struct {
 		Username string `json:"username" binding:"required"`
@@ -41,15 +64,15 @@ func (c *authController) Login(ctx *gin.Context) {
 	}
 
 	if err := ctx.ShouldBindJSON(&request); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		ctx.JSON(http.StatusBadRequest, dto.ErrorResponse400{Code: 400, Message: "invalid request"})
 		return
 	}
 
 	token, err := c.service.Login(ctx, request.Username, request.Password)
 	if err != nil {
-		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "invalid credentials"})
+		ctx.JSON(http.StatusUnauthorized, dto.ErrorResponseInvalidCredentials401{Code: 401, Message: "invalid credentials"})
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{"token": token})
+	ctx.JSON(http.StatusOK, dto.AuthResponse{Token: token})
 }
